# ACiD-Bus

./: .gitignore  CMakeLists.txt
include/: bus.h  frame.h  types.h
include/frame/: buffer.h  general.h  header.h
lib/: frame.c
lib/frame/: buffer.c  general.c  header.c
test/: CMakeLists.txt  bus_test.cxx
